Fix overflow Text:

--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -11,6 +11,7 @@ body {
 .wrapper{
     position: relative;
     min-height: 100vh;
+    word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5 {
